--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
+    "@chakra-ui/theme-tools": "^1.3.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.15.1",
