--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "typescript": "^4.5.2",
     "web-vitals": "^0.2.4"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.9",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint-config-airbnb": "^19.0.1",
