--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
