--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
 [build]
-  command = "CI= npm run build"
-  functions = "functions"
-  publish = "build"
+  command = 'CI= npm run build'
+  functions = 'functions'
+  publish = 'build'
+
+[[redirects]]
+  from = '/api/*'
+  to = '/.netlify/functions/:splat'
+  status = 200
