--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "@chakra-ui/theme-tools": "^1.3.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@netlify/functions": "^0.10.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "@types/aws-lambda": "^8.10.88",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
     "date-fns": "^2.27.0",
+    "faunadb": "^4.4.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-query": "^3.34.5",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "typescript": "^4.5.2",
