--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", ".eslintrc.js"]
+  "include": ["src", ".eslintrc.js", "functions/**/*"]
 }
