--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "faunadb": "^4.4.1",
     "formik": "^2.2.9",
