--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^3.34.5",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.11"
   },
@@ -62,7 +63,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0"
